# gui

./: Cargo.toml  shell.nix
src/: cli.yml  generator.rs  main.rs  pov.rs  render.rs  renderer.rs
src/graphics/: context.rs  mod.rs  render.rs
