[package]
name = "gui"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@ens-rennes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bottle = { path = "../../../utils/design/bottle" }
layout = { path = "../../../utils/design/layout", features = ["egl"] }
planutils = { path = "../../../utils/graphics/planutils" }
paint = { path = "../../../utils/graphics/paint" }

render-gl = { path = "../../../utils/graphics/render/gl" }
pastel = { path = "../../../ui/g/pastel" }
wabs = { path = "../../../ui/g/wabs/core", features = ["egl", "render"] }
wabs-desktop = { path = "../../../ui/g/wabs/desktop" }
wabs-wayland = { path = "../../../ui/g/wabs/wayland", features = ["egl"] }

cascading = { path = "../../../langs/cascading" }

khronos-egl = "1.0.1"
gl_loader = "*"
gl = "0.11"
# queues = "1.0.2"                    # Efficient FIFO Queue data structures
cassowary = "^0.3.0"                # Cassowary constraint solving algorithm
enumflags2 = "*"
enumflags2_derive = "*"
log = "*"
palette = "*"
xcur = "0.1.3"
num_cpus = "*"

stderrlog = "*"
clap = {version = "~2.27.0", features = ["yaml"] }
