[package]
name = "wonder-gui"
version = "0.1.0"
authors = ["Timothée Haudebourg <wonder@haudebourg.net>"]
edition = "2018"

[dependencies]
vulkano = "^0.20"
vulkano-win = "^0.20"
winit = "^0.24"
async-std = { version = "*", features = ["attributes"] }
engine = { path = "../../engine" }
bottle = { path = "../../../utils/design/bottle" }
