[package]
name = "wonder-gui"
version = "0.1.0"
authors = ["Timothée Haudebourg <wonder@haudebourg.net>"]
edition = "2018"

[dependencies]
log = "*"
stderrlog = "*"

wonder = { path = "../core" }
magma = { path = "../../../utils/graphics/magma" }
winit = "^0.24"
scene = { path = "../../utils/scene" }
cycles = { path = "../../utils/cycles" }
engine = { path = "../../utils/engine" }
bottle = { path = "../../../utils/design/bottle" }